--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -2,6 +2,7 @@
     "root": true,
     "env": {
         "browser": true,
+        "es6": true
     },
     "parser": "@babel/eslint-parser",
     "parserOptions": {
@@ -34,6 +35,7 @@
         "no-multiple-empty-lines": ["error", { "max": 1, "maxBOF": 1}]
     },
     "globals": {
-        "global": "writable"
+        "global": "writable",
+        "globalThis": "writable"
     }
 }
