--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "src/**/*.jsx": "eslint --fix --ext .jsx src/"
   },
   "dependencies": {
+    "@rematch/core": "^2.1.0",
     "express": "^4.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
     "@babel/eslint-parser": "^7.14.7",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.12.13",
     "@babel/register": "^7.15.3",
+    "@babel/runtime": "^7.15.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "9.0.1",
