--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "name": "isomorphic-react-startkit",
+  "version": "1.0.0",
+  "author": {
+    "name": "lilonghe",
+    "email": "lilonghe@outlook.com"
+  },
   "scripts": {
-    "dev": "node ./server/index.js",
+    "server": "node ./server/index.js",
     "predev": "npm run build",
     "start": "nodemon --config build/nodemon.json",
     "build": "cross-env NODE_ENV=production webpack --config=build/webpack.pro.js",
